# 3D-Scene-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-variants.yaml
data/: cube.off  monkey.off  quad.off  sphere.off  torus.off
lib/: camera.cpp  camera.h  context.cpp  context.h  cubemap.cpp  cubemap.h  definitions.h  environment.cpp  environment.h  filewatcher.cpp  filewatcher.h  framebuffer.h  helpers.cpp  helpers.h  light.h  mesh.cpp  mesh.h  program.h  rendereable.h  renderer.cpp  renderer.h  shader.cpp  shader.h  spatial.cpp  spatial.h  texture.h  timer.h  transform.cpp  transform.h  triangle.cpp  utilities.cpp  utilities.h
shaders/: def_frag.glsl  def_vert.glsl  depth_map_frag.glsl  env_frag.glsl  env_vert.glsl  flat_frag.glsl  fxaa_frag.glsl  grid_frag.glsl  normal_frag.glsl  normal_geom.glsl  normal_vert.glsl  offscreen_frag.glsl  offscreen_vert.glsl  outline_vert.glsl  phong_frag.glsl  phong_vert.glsl  reflect_frag.glsl  refract_frag.glsl  shadow_map_frag.glsl  shadow_vert.glsl
src/: CMakeLists.txt  README.md  camera.cpp  camera.h  context.cpp  context.h  helpers.cpp  helpers.h  main.cpp  mesh.cpp  mesh.h  mesh_data.h  my_context.cpp  my_context.h  program.h  program_data.h  transform.h  triangle.h  utilities.cpp  utilities.h
